iniciado de la redacción de uf1 - pbl de m7

--- a/smx_m7/uf1_notes.tex
+++ b/smx_m7/uf1_notes.tex
@@ -2,9 +2,22 @@
 \usepackage[catalan]{babel}
 \usepackage[utf8]{inputenc}
 \begin{document}
-\title{Notes per la UF1 oreientada a PBL}
+\title{Notes per la UF1 orientada a PBL}
 \author{Juan Aguilera}
 \maketitle
 
 \section{Notes prèvies}
+Mirant cap enrera com va sortir el projecte de la UF1, faig les següents consideracions:
+
+\begin{itemize}
+	\item S'ha de fer un enunciat obert i els alumnes han de tenir llibertat d'escollir les eines
+	\item classes magistrals quan calgui
+	\item reunions (tutoritzacions) amb els grups
+	\item avaluació global del grup + un tant per cent \% d'avaluació personal (15\%) ?
+	\item seria genial que els enunciats fossin diferents per els membres del grup
+	\item activitats complementàries
+	\item refer la rúbrica: mes oberta
+	\item reunions amb grups d'experts ?
+\end{itemize}
+
 \end{document}
