--- a/aso_apunts/systemd.tex
+++ b/aso_apunts/systemd.tex
@@ -1,26 +1,39 @@
 \documentclass[a4paper]{article}
 \usepackage[catalan]{babel}
 \usepackage[utf8]{inputenc}
+\usepackage[obeyspaces]{url}
+\usepackage{comment}
 \begin{document}
 \title{Systemd}
 \author{Juan Aguilera}
 \maketitle
 
-\section{Referències}
-En quant es pugui, passar-ho a bibliografia latex.
-\begin{verbatim}
-https://wiki.archlinux.org/index.php/Systemd_%28Espa%C3%B1ol%29
-https://wiki.debian.org/es/systemd
-\end{verbatim}
-\section{comanda bàsica}
-systemctl és la comanda per gestionar totes les unitats amb systemd.
+\begin{comment}
+oddsidemargin \the\oddsidemargin \newline
+textwidth \the\textwidth \newline
+marginparsep \the\marginparsep \newline
+marginparwidth \the\marginparwidth \newline
+hoffset \the\hoffset \newline
+paperwidth \the\paperwidth 
+\end{comment}
 
-\begin{verbatim}
-# systemctl start/stop/reload/status unidad
-# systemctl enable unidad --> activar l'inici automàtic en l'arrancada del sistema.
-\end{verbatim}
+\section{Comanda bàsica}
+systemctl és la comanda per gestionar totes les unitats amb systemd. Exemples:
+
+\begin{itemize}
+	\item Per veure l'estat de la unitat  \newline
+	\verb+# systemctl start/stop/reload/status <unidad>+ 
+	\item activar l'inici automàtic en l'arrancada del sistema. \newline
+	\verb+# systemctl enable unidad+ 
+\end{itemize}
+
 \section{Unitats}
 
 Les unitats poden ser serveis, punts de muntatge, dispositius, sockets. Els tipus d'unitats es denoten amb el sufixe: <nom de la unitat>.tipus, on tipus pot ser service, mount, socket o device.
 
+\begin{thebibliography}{99}
+	\bibitem{Arch} \url{https://wiki.archlinux.org/index.php/Systemd_%28Espa%C3%B1ol%29}
+	\bibitem{Debian} \url{https://wiki.debian.org/es/systemd}
+	
+\end{thebibliography}
 \end{document}
