He afegit items en la bibliografia

--- a/aso_apunts/systemd.tex
+++ b/aso_apunts/systemd.tex
@@ -33,6 +33,13 @@ Les unitats poden ser serveis, punts de muntatge, dispositius, sockets. Els tipu
 \begin{thebibliography}{99}
 	\bibitem{Arch} \url{https://wiki.archlinux.org/index.php/Systemd_%28Espa%C3%B1ol%29}
 	\bibitem{Debian} \url{https://wiki.debian.org/es/systemd}
+	\bibitem{PROCESS_CONTROL} \url{https://www.linux.com/learn/cleaning-your-linux-startup-process}
+	\bibitem{SYSTEMD_INTRO} \url{https://www.linux.com/learn/here-we-go-again-another-linux-init-intro-systemd}
+	\bibitem{SYSTEMD_INTRO} \url{https://www.linux.com/learn/here-we-go-again-another-linux-init-intro-systemd}
+	\bibitem{SYSTEMD_COMMANDS} \url{https://www.linux.com/learn/intro-systemd-runlevels-and-service-management-commands}
+	\bibitem{SYSTEMD_UNDERSTANDING} \url{https://www.linux.com/learn/understanding-and-using-systemd}
+		
+
 	
 \end{thebibliography}
 \end{document}
